Sem 6/CS335/Project/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    BREAK
    CIN
    CONTINUE
    COUT
    DELETE
    FALSE
    NEW
    RETURN
    TRUE
    WS

Grammar

Rule 0     S' -> translation_unit
Rule 1     primary_expression -> ID
Rule 2     primary_expression -> constant
Rule 3     primary_expression -> STRING_CONST
Rule 4     primary_expression -> ( expression )
Rule 5     constant -> INT_CONST
Rule 6     constant -> CHAR_CONST
Rule 7     constant -> STRING_CONST
Rule 8     constant -> BOOL_CONST
Rule 9     postfix_expression -> primary_expression
Rule 10    postfix_expression -> postfix_expression [ expression ]
Rule 11    postfix_expression -> postfix_expression ( )
Rule 12    postfix_expression -> postfix_expression ( argument_expression_list )
Rule 13    postfix_expression -> postfix_expression . ID
Rule 14    postfix_expression -> postfix_expression PTR_OP ID
Rule 15    postfix_expression -> postfix_expression INC_OP
Rule 16    postfix_expression -> postfix_expression DEC_OP
Rule 17    argument_expression_list -> assignment_expression
Rule 18    argument_expression_list -> argument_expression_list , assignment_expression
Rule 19    unary_expression -> postfix_expression
Rule 20    unary_expression -> INC_OP unary_expression
Rule 21    unary_expression -> DEC_OP unary_expression
Rule 22    unary_expression -> unary_operator cast_expression
Rule 23    unary_expression -> SIZEOF unary_expression
Rule 24    unary_expression -> SIZEOF ( type_name )
Rule 25    unary_operator -> &
Rule 26    unary_operator -> *
Rule 27    unary_operator -> +
Rule 28    unary_operator -> -
Rule 29    unary_operator -> ~
Rule 30    unary_operator -> !
Rule 31    cast_expression -> unary_expression
Rule 32    cast_expression -> ( type_name ) cast_expression
Rule 33    multiplicative_expression -> cast_expression
Rule 34    multiplicative_expression -> multiplicative_expression * cast_expression
Rule 35    multiplicative_expression -> multiplicative_expression / cast_expression
Rule 36    multiplicative_expression -> multiplicative_expression % cast_expression
Rule 37    additive_expression -> multiplicative_expression
Rule 38    additive_expression -> additive_expression + multiplicative_expression
Rule 39    additive_expression -> additive_expression - multiplicative_expression
Rule 40    shift_expression -> additive_expression
Rule 41    shift_expression -> shift_expression LEFT_OP additive_expression
Rule 42    shift_expression -> shift_expression RIGHT_OP additive_expression
Rule 43    relational_expression -> shift_expression
Rule 44    relational_expression -> relational_expression < shift_expression
Rule 45    relational_expression -> relational_expression > shift_expression
Rule 46    relational_expression -> relational_expression LE_OP shift_expression
Rule 47    relational_expression -> relational_expression GE_OP shift_expression
Rule 48    equality_expression -> relational_expression
Rule 49    equality_expression -> equality_expression EQ_OP relational_expression
Rule 50    equality_expression -> equality_expression NE_OP relational_expression
Rule 51    and_expression -> equality_expression
Rule 52    and_expression -> and_expression & equality_expression
Rule 53    exclusive_or_expression -> and_expression
Rule 54    exclusive_or_expression -> exclusive_or_expression ^ and_expression
Rule 55    inclusive_or_expression -> exclusive_or_expression
Rule 56    inclusive_or_expression -> inclusive_or_expression | exclusive_or_expression
Rule 57    logical_and_expression -> inclusive_or_expression
Rule 58    logical_and_expression -> logical_and_expression AND_OP inclusive_or_expression
Rule 59    logical_or_expression -> logical_and_expression
Rule 60    logical_or_expression -> logical_or_expression OR_OP logical_and_expression
Rule 61    conditional_expression -> logical_or_expression
Rule 62    conditional_expression -> logical_or_expression ? expression : conditional_expression
Rule 63    assignment_expression -> conditional_expression
Rule 64    assignment_expression -> unary_expression assignment_operator assignment_expression
Rule 65    assignment_operator -> =
Rule 66    assignment_operator -> MUL_ASSIGN
Rule 67    assignment_operator -> DIV_ASSIGN
Rule 68    assignment_operator -> MOD_ASSIGN
Rule 69    assignment_operator -> ADD_ASSIGN
Rule 70    assignment_operator -> SUB_ASSIGN
Rule 71    assignment_operator -> LEFT_ASSIGN
Rule 72    assignment_operator -> RIGHT_ASSIGN
Rule 73    assignment_operator -> AND_ASSIGN
Rule 74    assignment_operator -> XOR_ASSIGN
Rule 75    assignment_operator -> OR_ASSIGN
Rule 76    expression -> assignment_expression
Rule 77    expression -> expression , assignment_expression
Rule 78    constant_expression -> conditional_expression
Rule 79    declaration -> declaration_specifiers init_declarator_list ;
Rule 80    declaration -> declaration_specifiers ;
Rule 81    declaration_specifiers -> type_specifier
Rule 82    declaration_specifiers -> type_specifier declaration_specifiers
Rule 83    init_declarator_list -> init_declarator
Rule 84    init_declarator_list -> init_declarator_list , init_declarator
Rule 85    init_declarator -> declarator
Rule 86    init_declarator -> declarator = initializer
Rule 87    type_specifier -> VOID
Rule 88    type_specifier -> BOOL
Rule 89    type_specifier -> CHAR
Rule 90    type_specifier -> INT
Rule 91    type_specifier -> struct_specifier
Rule 92    struct_specifier -> STRUCT ID { struct_declaration_list }
Rule 93    struct_specifier -> STRUCT { struct_declaration_list }
Rule 94    struct_specifier -> STRUCT ID
Rule 95    struct_declaration_list -> struct_declaration
Rule 96    struct_declaration_list -> struct_declaration_list struct_declaration
Rule 97    struct_declaration -> specifier_qualifier_list struct_declarator_list ;
Rule 98    struct_declaration -> specifier_qualifier_list ;
Rule 99    specifier_qualifier_list -> type_specifier specifier_qualifier_list
Rule 100   specifier_qualifier_list -> type_specifier
Rule 101   struct_declarator_list -> struct_declarator
Rule 102   struct_declarator_list -> struct_declarator_list , struct_declarator
Rule 103   struct_declarator -> declarator
Rule 104   struct_declarator -> : constant_expression
Rule 105   struct_declarator -> declarator : constant_expression
Rule 106   declarator -> pointer direct_declarator
Rule 107   declarator -> direct_declarator
Rule 108   direct_declarator -> ID
Rule 109   direct_declarator -> ( declarator )
Rule 110   direct_declarator -> direct_declarator [ ]
Rule 111   direct_declarator -> direct_declarator [ constant_expression ]
Rule 112   direct_declarator -> direct_declarator ( parameter_type_list )
Rule 113   direct_declarator -> direct_declarator ( identifier_list )
Rule 114   direct_declarator -> direct_declarator ( )
Rule 115   pointer -> *
Rule 116   parameter_type_list -> parameter_list
Rule 117   parameter_list -> parameter_declaration
Rule 118   parameter_list -> parameter_list , parameter_declaration
Rule 119   parameter_declaration -> declaration_specifiers declarator
Rule 120   parameter_declaration -> declaration_specifiers abstract_declarator
Rule 121   parameter_declaration -> declaration_specifiers
Rule 122   identifier_list -> ID
Rule 123   identifier_list -> identifier_list , ID
Rule 124   type_name -> specifier_qualifier_list abstract_declarator
Rule 125   type_name -> specifier_qualifier_list
Rule 126   abstract_declarator -> pointer
Rule 127   abstract_declarator -> direct_abstract_declarator
Rule 128   abstract_declarator -> pointer direct_abstract_declarator
Rule 129   direct_abstract_declarator -> ( abstract_declarator )
Rule 130   direct_abstract_declarator -> [ constant_expression ]
Rule 131   direct_abstract_declarator -> [ ]
Rule 132   direct_abstract_declarator -> direct_abstract_declarator [ ]
Rule 133   direct_abstract_declarator -> direct_abstract_declarator [ constant_expression ]
Rule 134   direct_abstract_declarator -> ( parameter_type_list )
Rule 135   direct_abstract_declarator -> ( )
Rule 136   direct_abstract_declarator -> direct_abstract_declarator ( parameter_type_list )
Rule 137   direct_abstract_declarator -> direct_abstract_declarator ( )
Rule 138   initializer -> assignment_expression
Rule 139   initializer -> { initializer_list }
Rule 140   initializer -> { initializer_list , }
Rule 141   initializer_list -> initializer
Rule 142   initializer_list -> initializer_list , initializer
Rule 143   initializer_list -> initializer_list , designation initializer
Rule 144   initializer_list -> designation initializer
Rule 145   designation -> designator_list =
Rule 146   designator_list -> designator
Rule 147   designator_list -> designator_list designator
Rule 148   designator -> [ constant_expression ]
Rule 149   designator -> . ID
Rule 150   statement -> compound_statement
Rule 151   statement -> expression_statement
Rule 152   statement -> selection_statement
Rule 153   statement -> iteration_statement
Rule 154   compound_statement -> { }
Rule 155   compound_statement -> { block_item_list }
Rule 156   block_item_list -> block_item
Rule 157   block_item_list -> block_item_list block_item
Rule 158   block_item -> declaration
Rule 159   block_item -> statement
Rule 160   expression_statement -> ;
Rule 161   expression_statement -> expression ;
Rule 162   selection_statement -> IF ( expression ) statement
Rule 163   selection_statement -> IF ( expression ) statement ELSE statement
Rule 164   iteration_statement -> WHILE ( expression ) statement
Rule 165   iteration_statement -> DO statement WHILE ( expression ) ;
Rule 166   iteration_statement -> FOR ( expression_statement expression_statement ) statement
Rule 167   iteration_statement -> FOR ( expression_statement expression_statement expression ) statement
Rule 168   iteration_statement -> FOR ( declaration expression_statement ) statement
Rule 169   iteration_statement -> FOR ( declaration expression_statement expression ) statement
Rule 170   translation_unit -> external_declaration
Rule 171   translation_unit -> translation_unit external_declaration
Rule 172   external_declaration -> function_definition
Rule 173   external_declaration -> declaration
Rule 174   function_definition -> declaration_specifiers declarator declaration_list compound_statement
Rule 175   function_definition -> declaration_specifiers declarator compound_statement
Rule 176   declaration_list -> declaration
Rule 177   declaration_list -> declaration_list declaration

Terminals, with rules where they appear

!                    : 30
%                    : 36
&                    : 25 52
(                    : 4 11 12 24 32 109 112 113 114 129 134 135 136 137 162 163 164 165 166 167 168 169
)                    : 4 11 12 24 32 109 112 113 114 129 134 135 136 137 162 163 164 165 166 167 168 169
*                    : 26 34 115
+                    : 27 38
,                    : 18 77 84 102 118 123 140 142 143
-                    : 28 39
.                    : 13 149
/                    : 35
:                    : 62 104 105
;                    : 79 80 97 98 160 161 165
<                    : 44
=                    : 65 86 145
>                    : 45
?                    : 62
ADD_ASSIGN           : 69
AND_ASSIGN           : 73
AND_OP               : 58
BOOL                 : 88
BOOL_CONST           : 8
BREAK                : 
CHAR                 : 89
CHAR_CONST           : 6
CIN                  : 
CONTINUE             : 
COUT                 : 
DEC_OP               : 16 21
DELETE               : 
DIV_ASSIGN           : 67
DO                   : 165
ELSE                 : 163
EQ_OP                : 49
FALSE                : 
FOR                  : 166 167 168 169
GE_OP                : 47
ID                   : 1 13 14 92 94 108 122 123 149
IF                   : 162 163
INC_OP               : 15 20
INT                  : 90
INT_CONST            : 5
LEFT_ASSIGN          : 71
LEFT_OP              : 41
LE_OP                : 46
MOD_ASSIGN           : 68
MUL_ASSIGN           : 66
NEW                  : 
NE_OP                : 50
OR_ASSIGN            : 75
OR_OP                : 60
PTR_OP               : 14
RETURN               : 
RIGHT_ASSIGN         : 72
RIGHT_OP             : 42
SIZEOF               : 23 24
STRING_CONST         : 3 7
STRUCT               : 92 93 94
SUB_ASSIGN           : 70
TRUE                 : 
VOID                 : 87
WHILE                : 164 165
WS                   : 
XOR_ASSIGN           : 74
[                    : 10 110 111 130 131 132 133 148
]                    : 10 110 111 130 131 132 133 148
^                    : 54
error                : 
{                    : 92 93 139 140 154 155
|                    : 56
}                    : 92 93 139 140 154 155
~                    : 29

Nonterminals, with rules where they appear

abstract_declarator  : 120 124 129
additive_expression  : 38 39 40 41 42
and_expression       : 52 53 54
argument_expression_list : 12 18
assignment_expression : 17 18 64 76 77 138
assignment_operator  : 64
block_item           : 156 157
block_item_list      : 155 157
cast_expression      : 22 32 33 34 35 36
compound_statement   : 150 174 175
conditional_expression : 62 63 78
constant             : 2
constant_expression  : 104 105 111 130 133 148
declaration          : 158 168 169 173 176 177
declaration_list     : 174 177
declaration_specifiers : 79 80 82 119 120 121 174 175
declarator           : 85 86 103 105 109 119 174 175
designation          : 143 144
designator           : 146 147
designator_list      : 145 147
direct_abstract_declarator : 127 128 132 133 136 137
direct_declarator    : 106 107 110 111 112 113 114
equality_expression  : 49 50 51 52
exclusive_or_expression : 54 55 56
expression           : 4 10 62 77 161 162 163 164 165 167 169
expression_statement : 151 166 166 167 167 168 169
external_declaration : 170 171
function_definition  : 172
identifier_list      : 113 123
inclusive_or_expression : 56 57 58
init_declarator      : 83 84
init_declarator_list : 79 84
initializer          : 86 141 142 143 144
initializer_list     : 139 140 142 143
iteration_statement  : 153
logical_and_expression : 58 59 60
logical_or_expression : 60 61 62
multiplicative_expression : 34 35 36 37 38 39
parameter_declaration : 117 118
parameter_list       : 116 118
parameter_type_list  : 112 134 136
pointer              : 106 126 128
postfix_expression   : 10 11 12 13 14 15 16 19
primary_expression   : 9
relational_expression : 44 45 46 47 48 49 50
selection_statement  : 152
shift_expression     : 41 42 43 44 45 46 47
specifier_qualifier_list : 97 98 99 124 125
statement            : 159 162 163 163 164 165 166 167 168 169
struct_declaration   : 95 96
struct_declaration_list : 92 93 96
struct_declarator    : 101 102
struct_declarator_list : 97 102
struct_specifier     : 91
translation_unit     : 171 0
type_name            : 24 32
type_specifier       : 81 82 99 100
unary_expression     : 20 21 23 31 64
unary_operator       : 22

Parsing method: LALR

state 0

    (0) S' -> . translation_unit
    (170) translation_unit -> . external_declaration
    (171) translation_unit -> . translation_unit external_declaration
    (172) external_declaration -> . function_definition
    (173) external_declaration -> . declaration
    (174) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (175) function_definition -> . declaration_specifiers declarator compound_statement
    (79) declaration -> . declaration_specifiers init_declarator_list ;
    (80) declaration -> . declaration_specifiers ;
    (81) declaration_specifiers -> . type_specifier
    (82) declaration_specifiers -> . type_specifier declaration_specifiers
    (87) type_specifier -> . VOID
    (88) type_specifier -> . BOOL
    (89) type_specifier -> . CHAR
    (90) type_specifier -> . INT
    (91) type_specifier -> . struct_specifier
    (92) struct_specifier -> . STRUCT ID { struct_declaration_list }
    (93) struct_specifier -> . STRUCT { struct_declaration_list }
    (94) struct_specifier -> . STRUCT ID

    VOID            shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    STRUCT          shift and go to state 12

    translation_unit               shift and go to state 1
    external_declaration           shift and go to state 2
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    type_specifier                 shift and go to state 6
    struct_specifier               shift and go to state 11

state 1

    (0) S' -> translation_unit .
    (171) translation_unit -> translation_unit . external_declaration
    (172) external_declaration -> . function_definition
    (173) external_declaration -> . declaration
    (174) function_definition -> . declaration_specifiers declarator declaration_list compound_statement
    (175) function_definition -> . declaration_specifiers declarator compound_statement
    (79) declaration -> . declaration_specifiers init_declarator_list ;
    (80) declaration -> . declaration_specifiers ;
    (81) declaration_specifiers -> . type_specifier
    (82) declaration_specifiers -> . type_specifier declaration_specifiers
    (87) type_specifier -> . VOID
    (88) type_specifier -> . BOOL
    (89) type_specifier -> . CHAR
    (90) type_specifier -> . INT
    (91) type_specifier -> . struct_specifier
    (92) struct_specifier -> . STRUCT ID { struct_declaration_list }
    (93) struct_specifier -> . STRUCT { struct_declaration_list }
    (94) struct_specifier -> . STRUCT ID

    VOID            shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    STRUCT          shift and go to state 12

    external_declaration           shift and go to state 13
    function_definition            shift and go to state 3
    declaration                    shift and go to state 4
    declaration_specifiers         shift and go to state 5
    type_specifier                 shift and go to state 6
    struct_specifier               shift and go to state 11

state 2

    (170) translation_unit -> external_declaration .

    VOID            reduce using rule 170 (translation_unit -> external_declaration .)
    BOOL            reduce using rule 170 (translation_unit -> external_declaration .)
    CHAR            reduce using rule 170 (translation_unit -> external_declaration .)
    INT             reduce using rule 170 (translation_unit -> external_declaration .)
    STRUCT          reduce using rule 170 (translation_unit -> external_declaration .)
    $end            reduce using rule 170 (translation_unit -> external_declaration .)


state 3

    (172) external_declaration -> function_definition .

    VOID            reduce using rule 172 (external_declaration -> function_definition .)
    BOOL            reduce using rule 172 (external_declaration -> function_definition .)
    CHAR            reduce using rule 172 (external_declaration -> function_definition .)
    INT             reduce using rule 172 (external_declaration -> function_definition .)
    STRUCT          reduce using rule 172 (external_declaration -> function_definition .)
    $end            reduce using rule 172 (external_declaration -> function_definition .)


state 4

    (173) external_declaration -> declaration .

    VOID            reduce using rule 173 (external_declaration -> declaration .)
    BOOL            reduce using rule 173 (external_declaration -> declaration .)
    CHAR            reduce using rule 173 (external_declaration -> declaration .)
    INT             reduce using rule 173 (external_declaration -> declaration .)
    STRUCT          reduce using rule 173 (external_declaration -> declaration .)
    $end            reduce using rule 173 (external_declaration -> declaration .)


state 5

    (174) function_definition -> declaration_specifiers . declarator declaration_list compound_statement
    (175) function_definition -> declaration_specifiers . declarator compound_statement
    (79) declaration -> declaration_specifiers . init_declarator_list ;
    (80) declaration -> declaration_specifiers . ;
    (106) declarator -> . pointer direct_declarator
    (107) declarator -> . direct_declarator
    (83) init_declarator_list -> . init_declarator
    (84) init_declarator_list -> . init_declarator_list , init_declarator
    (115) pointer -> . *
    (108) direct_declarator -> . ID
    (109) direct_declarator -> . ( declarator )
    (110) direct_declarator -> . direct_declarator [ ]
    (111) direct_declarator -> . direct_declarator [ constant_expression ]
    (112) direct_declarator -> . direct_declarator ( parameter_type_list )
    (113) direct_declarator -> . direct_declarator ( identifier_list )
    (114) direct_declarator -> . direct_declarator ( )
    (85) init_declarator -> . declarator
    (86) init_declarator -> . declarator = initializer

    ;               shift and go to state 16
    *               shift and go to state 20
    ID              shift and go to state 21
    (               shift and go to state 22

    declarator                     shift and go to state 14
    init_declarator_list           shift and go to state 15
    pointer                        shift and go to state 17
    direct_declarator              shift and go to state 18
    init_declarator                shift and go to state 19

state 6

    (81) declaration_specifiers -> type_specifier .
    (82) declaration_specifiers -> type_specifier . declaration_specifiers
    (81) declaration_specifiers -> . type_specifier
    (82) declaration_specifiers -> . type_specifier declaration_specifiers
    (87) type_specifier -> . VOID
    (88) type_specifier -> . BOOL
    (89) type_specifier -> . CHAR
    (90) type_specifier -> . INT
    (91) type_specifier -> . struct_specifier
    (92) struct_specifier -> . STRUCT ID { struct_declaration_list }
    (93) struct_specifier -> . STRUCT { struct_declaration_list }
    (94) struct_specifier -> . STRUCT ID

    ;               reduce using rule 81 (declaration_specifiers -> type_specifier .)
    *               reduce using rule 81 (declaration_specifiers -> type_specifier .)
    ID              reduce using rule 81 (declaration_specifiers -> type_specifier .)
    (               reduce using rule 81 (declaration_specifiers -> type_specifier .)
    [               reduce using rule 81 (declaration_specifiers -> type_specifier .)
    ,               reduce using rule 81 (declaration_specifiers -> type_specifier .)
    )               reduce using rule 81 (declaration_specifiers -> type_specifier .)
    VOID            shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    STRUCT          shift and go to state 12

    type_specifier                 shift and go to state 6
    declaration_specifiers         shift and go to state 23
    struct_specifier               shift and go to state 11

state 7

    (87) type_specifier -> VOID .

    VOID            reduce using rule 87 (type_specifier -> VOID .)
    BOOL            reduce using rule 87 (type_specifier -> VOID .)
    CHAR            reduce using rule 87 (type_specifier -> VOID .)
    INT             reduce using rule 87 (type_specifier -> VOID .)
    STRUCT          reduce using rule 87 (type_specifier -> VOID .)
    ;               reduce using rule 87 (type_specifier -> VOID .)
    *               reduce using rule 87 (type_specifier -> VOID .)
    ID              reduce using rule 87 (type_specifier -> VOID .)
    (               reduce using rule 87 (type_specifier -> VOID .)
    [               reduce using rule 87 (type_specifier -> VOID .)
    ,               reduce using rule 87 (type_specifier -> VOID .)
    )               reduce using rule 87 (type_specifier -> VOID .)
    :               reduce using rule 87 (type_specifier -> VOID .)


state 8

    (88) type_specifier -> BOOL .

    VOID            reduce using rule 88 (type_specifier -> BOOL .)
    BOOL            reduce using rule 88 (type_specifier -> BOOL .)
    CHAR            reduce using rule 88 (type_specifier -> BOOL .)
    INT             reduce using rule 88 (type_specifier -> BOOL .)
    STRUCT          reduce using rule 88 (type_specifier -> BOOL .)
    ;               reduce using rule 88 (type_specifier -> BOOL .)
    *               reduce using rule 88 (type_specifier -> BOOL .)
    ID              reduce using rule 88 (type_specifier -> BOOL .)
    (               reduce using rule 88 (type_specifier -> BOOL .)
    [               reduce using rule 88 (type_specifier -> BOOL .)
    ,               reduce using rule 88 (type_specifier -> BOOL .)
    )               reduce using rule 88 (type_specifier -> BOOL .)
    :               reduce using rule 88 (type_specifier -> BOOL .)


state 9

    (89) type_specifier -> CHAR .

    VOID            reduce using rule 89 (type_specifier -> CHAR .)
    BOOL            reduce using rule 89 (type_specifier -> CHAR .)
    CHAR            reduce using rule 89 (type_specifier -> CHAR .)
    INT             reduce using rule 89 (type_specifier -> CHAR .)
    STRUCT          reduce using rule 89 (type_specifier -> CHAR .)
    ;               reduce using rule 89 (type_specifier -> CHAR .)
    *               reduce using rule 89 (type_specifier -> CHAR .)
    ID              reduce using rule 89 (type_specifier -> CHAR .)
    (               reduce using rule 89 (type_specifier -> CHAR .)
    [               reduce using rule 89 (type_specifier -> CHAR .)
    ,               reduce using rule 89 (type_specifier -> CHAR .)
    )               reduce using rule 89 (type_specifier -> CHAR .)
    :               reduce using rule 89 (type_specifier -> CHAR .)


state 10

    (90) type_specifier -> INT .

    VOID            reduce using rule 90 (type_specifier -> INT .)
    BOOL            reduce using rule 90 (type_specifier -> INT .)
    CHAR            reduce using rule 90 (type_specifier -> INT .)
    INT             reduce using rule 90 (type_specifier -> INT .)
    STRUCT          reduce using rule 90 (type_specifier -> INT .)
    ;               reduce using rule 90 (type_specifier -> INT .)
    *               reduce using rule 90 (type_specifier -> INT .)
    ID              reduce using rule 90 (type_specifier -> INT .)
    (               reduce using rule 90 (type_specifier -> INT .)
    [               reduce using rule 90 (type_specifier -> INT .)
    ,               reduce using rule 90 (type_specifier -> INT .)
    )               reduce using rule 90 (type_specifier -> INT .)
    :               reduce using rule 90 (type_specifier -> INT .)


state 11

    (91) type_specifier -> struct_specifier .

    VOID            reduce using rule 91 (type_specifier -> struct_specifier .)
    BOOL            reduce using rule 91 (type_specifier -> struct_specifier .)
    CHAR            reduce using rule 91 (type_specifier -> struct_specifier .)
    INT             reduce using rule 91 (type_specifier -> struct_specifier .)
    STRUCT          reduce using rule 91 (type_specifier -> struct_specifier .)
    ;               reduce using rule 91 (type_specifier -> struct_specifier .)
    *               reduce using rule 91 (type_specifier -> struct_specifier .)
    ID              reduce using rule 91 (type_specifier -> struct_specifier .)
    (               reduce using rule 91 (type_specifier -> struct_specifier .)
    [               reduce using rule 91 (type_specifier -> struct_specifier .)
    ,               reduce using rule 91 (type_specifier -> struct_specifier .)
    )               reduce using rule 91 (type_specifier -> struct_specifier .)
    :               reduce using rule 91 (type_specifier -> struct_specifier .)


state 12

    (92) struct_specifier -> STRUCT . ID { struct_declaration_list }
    (93) struct_specifier -> STRUCT . { struct_declaration_list }
    (94) struct_specifier -> STRUCT . ID

    ID              shift and go to state 24
    {               shift and go to state 25


state 13

    (171) translation_unit -> translation_unit external_declaration .

    VOID            reduce using rule 171 (translation_unit -> translation_unit external_declaration .)
    BOOL            reduce using rule 171 (translation_unit -> translation_unit external_declaration .)
    CHAR            reduce using rule 171 (translation_unit -> translation_unit external_declaration .)
    INT             reduce using rule 171 (translation_unit -> translation_unit external_declaration .)
    STRUCT          reduce using rule 171 (translation_unit -> translation_unit external_declaration .)
    $end            reduce using rule 171 (translation_unit -> translation_unit external_declaration .)


state 14

    (174) function_definition -> declaration_specifiers declarator . declaration_list compound_statement
    (175) function_definition -> declaration_specifiers declarator . compound_statement
    (85) init_declarator -> declarator .
    (86) init_declarator -> declarator . = initializer
    (176) declaration_list -> . declaration
    (177) declaration_list -> . declaration_list declaration
    (154) compound_statement -> . { }
    (155) compound_statement -> . { block_item_list }
    (79) declaration -> . declaration_specifiers init_declarator_list ;
    (80) declaration -> . declaration_specifiers ;
    (81) declaration_specifiers -> . type_specifier
    (82) declaration_specifiers -> . type_specifier declaration_specifiers
    (87) type_specifier -> . VOID
    (88) type_specifier -> . BOOL
    (89) type_specifier -> . CHAR
    (90) type_specifier -> . INT
    (91) type_specifier -> . struct_specifier
    (92) struct_specifier -> . STRUCT ID { struct_declaration_list }
    (93) struct_specifier -> . STRUCT { struct_declaration_list }
    (94) struct_specifier -> . STRUCT ID

    ;               reduce using rule 85 (init_declarator -> declarator .)
    ,               reduce using rule 85 (init_declarator -> declarator .)
    =               shift and go to state 29
    {               shift and go to state 31
    VOID            shift and go to state 7
    BOOL            shift and go to state 8
    CHAR            shift and go to state 9
    INT             shift and go to state 10
    STRUCT          shift and go to state 12

    declaration_specifiers         shift and go to state 26
    declaration_list               shift and go to state 27
    compound_statement             shift and go to state 28
    declaration                    shift and go to state 30
    type_specifier                 shift and go to state 6
    struct_specifier               shift and go to state 11

state 15

    (79) declaration -> declaration_specifiers init_declarator_list . ;
    (84) init_declarator_list -> init_declarator_list . , init_declarator

    ;               shift and go to state 32
    ,               shift and go to state 33


state 16

    (80) declaration -> declaration_specifiers ; .

    VOID            reduce using rule 80 (declaration -> declaration_specifiers ; .)
    BOOL            reduce using rule 80 (declaration -> declaration_specifiers ; .)
    CHAR            reduce using rule 80 (declaration -> declaration_specifiers ; .)
    INT             reduce using rule 80 (declaration -> declaration_specifiers ; .)
    STRUCT          reduce using rule 80 (declaration -> declaration_specifiers ; .)
    $end            reduce using rule 80 (declaration -> declaration_specifiers ; .)
    {               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    }               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    ;               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    IF              reduce using rule 80 (declaration -> declaration_specifiers ; .)
    WHILE           reduce using rule 80 (declaration -> declaration_specifiers ; .)
    DO              reduce using rule 80 (declaration -> declaration_specifiers ; .)
    FOR             reduce using rule 80 (declaration -> declaration_specifiers ; .)
    INC_OP          reduce using rule 80 (declaration -> declaration_specifiers ; .)
    DEC_OP          reduce using rule 80 (declaration -> declaration_specifiers ; .)
    SIZEOF          reduce using rule 80 (declaration -> declaration_specifiers ; .)
    &               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    *               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    +               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    -               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    ~               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    !               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    ID              reduce using rule 80 (declaration -> declaration_specifiers ; .)
    STRING_CONST    reduce using rule 80 (declaration -> declaration_specifiers ; .)
    (               reduce using rule 80 (declaration -> declaration_specifiers ; .)
    INT_CONST       reduce using rule 80 (declaration -> declaration_specifiers ; .)
    CHAR_CONST      reduce using rule 80 (declaration -> declaration_specifiers ; .)
    BOOL_CONST      reduce using rule 80 (declaration -> declaration_specifiers ; .)


state 17

    (106) declarator -> pointer . direct_declarator
    (108) direct_declarator -> . ID
    (109) direct_declarator -> . ( declarator )
    (110) direct_declarator -> . direct_declarator [ ]
    (111) direct_declarator -> . direct_declarator [ constant_expression ]
    (112) direct_declarator -> . direct_declarator ( parameter_type_list )
    (113) direct_declarator -> . direct_declarator ( identifier_list )
    (114) direct_declarator -> . direct_declarator ( )

    ID              shift and go to state 21
    (               shift and go to state 22

    direct_declarator              shift and go to state 34

state 18

    (107) declarator -> direct_declarator .
    (110) direct_declarator -> direct_declarator . [ ]
    (111) direct_declarator -> direct_declarator . [ constant_expression ]
    (112) direct_declarator -> direct_declarator . ( parameter_type_list )
    (113) direct_declarator -> direct_declarator . ( identifier_list )
    (114) direct_declarator -> direct_declarator . ( )

    =               reduce using rule 107 (declarator -> direct_declarator .)
    {               reduce using rule 107 (declarator -> direct_declarator .)
    VOID            reduce using rule 107 (declarator -> direct_declarator .)
    BOOL            reduce using rule 107 (declarator -> direct_declarator .)
    CHAR            reduce using rule 107 (declarator -> direct_declarator .)
    INT             reduce using rule 107 (declarator -> direct_declarator .)
    STRUCT          reduce using rule 107 (declarator -> direct_declarator .)
    ;               reduce using rule 107 (declarator -> direct_declarator .)
    ,               reduce using rule 107 (declarator -> direct_declarator .)
    )               reduce using rule 107 (declarator -> direct_declarator .)
    :               reduce using rule 107 (declarator -> direct_declarator .)
    [               shift and go to state 35
    (               shift and go to state 36


state 19

    (83) init_declarator_list -> init_declarator .

    ;               reduce using rule 83 (init_declarator_list -> init_declarator .)
    ,               reduce using rule 83 (init_declarator_list -> init_declarator .)


state 20

    (115) pointer -> * .

    ID              reduce using rule 115 (pointer -> * .)
    (               reduce using rule 115 (pointer -> * .)
    [               reduce using rule 115 (pointer -> * .)
    ,               reduce using rule 115 (pointer -> * .)
    )               reduce using rule 115 (pointer -> * .)


state 21

    (108) direct_declarator -> ID .

    [               reduce using rule 108 (direct_declarator -> ID .)
    (               reduce using rule 108 (direct_declarator -> ID .)
    =               reduce using rule 108 (direct_declarator -> ID .)
    {               reduce using rule 108 (direct_declarator -> ID .)
    VOID            reduce using rule 108 (direct_declarator -> ID .)
    BOOL            reduce using rule 108 (direct_declarator -> ID .)
    CHAR            reduce using rule 108 (direct_declarator -> ID .)
    INT             reduce using rule 108 (direct_declarator -> ID .)
    STRUCT          reduce using rule 108 (direct_declarator -> ID .)
    ;               reduce using rule 108 (direct_declarator -> ID .)
    ,               reduce using rule 108 (direct_declarator -> ID .)
    )               reduce using rule 108 (direct_declarator -> ID .)
    :               reduce using rule 108 (direct_declarator -> ID .)


state 22

    (109) direct_declarator -> ( . declarator )
    (106) declarator -> . pointer direct_declarator
    (107) declarator -> . direct_declarator
    (115) pointer -> . *
    (108) direct_declarator -> . ID
    (109) direct_declarator -> . ( declarator )
    (110) direct_declarator -> . direct_declarator [ ]
    (111) direct_declarator -> . direct_declarator [ constant_expression ]
    (112) direct_declarator -> . direct_declarator ( parameter_type_list )
    (113) direct_declarator -> . direct_declarator ( identifier_list )
    (114) direct_declarator -> . direct_declarator ( )

    *               shift and go to state 20
    ID              shift and go to state 21
    (               shift and go to state 22

    declarator                     shift and go to state 37
    pointer                        shift and go to state 17
    direct_declarator              shift and go to state 18

state 23
